[gd_scene load_steps=14 format=2]

[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/player/ESC/ControlsScreenESC.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
extra_spacing_top = 12
extra_spacing_bottom = 6
extra_spacing_space = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = null
Button/styles/focus = SubResource( 12 )
Button/styles/hover = SubResource( 13 )
Button/styles/normal = SubResource( 14 )
Button/styles/pressed = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=11]
size = 25
extra_spacing_top = 5
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Preto Fundo" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -438.0
margin_top = -142.0
margin_right = 600.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 1 )
text = "          Settings:
Music Volume:        << 100 >>
Sound Efecct Volume:  << 100 >>
Toggle FullScreen:      |  |
Toggle Borderless:      |  |"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tela_cheiona" type="Button" parent="CanvasLayer"]
margin_left = 770.0
margin_top = 302.0
margin_right = 860.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -50.0
margin_right = 79.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="CanvasLayer/Controller"]
margin_right = 159.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/tela_cheiona" to="." method="_on_tela_cheiona_pressed"]
[connection signal="pressed" from="CanvasLayer/Controller/Return" to="." method="_on_Return_pressed"]
